--- a/TrancheWpf/App.xaml
+++ b/TrancheWpf/App.xaml
@@ -1,9 +1,7 @@
-﻿<Application x:Class="TrancheWpf.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TrancheWpf"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application x:Class="TrancheWpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:TrancheWpf" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vml="clr-namespace:TrancheWpf.VML">
+  <Application.Resources>
+    <ResourceDictionary>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
