--- a/TrancheWpf/Views/TargetsView.xaml
+++ b/TrancheWpf/Views/TargetsView.xaml
@@ -12,21 +12,20 @@
              d:DesignHeight="300" Width="250" BorderThickness="0,0,1,0">
     <UserControl.Resources>
         <DataTemplate DataType = "{x:Type data:Target}">
-            <StackPanel Orientation = "Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-                <TextBlock Text = "{Binding Path = Alias, Mode = OneWay}" 
-               Margin = "0 5 3 5"/>
+                <TextBlock HorizontalAlignment="Stretch" Text = "{Binding Path = Alias, Mode = OneWay}" 
+               Margin = "0 5 3 5" FontWeight="Bold" FontSize="18"/>
                 
-            </StackPanel>
 
         </DataTemplate>
     </UserControl.Resources>
 
     <Grid>
         <StackPanel Orientation="Horizontal">
-            <ListBox 
+            <ListBox ScrollViewer.VerticalScrollBarVisibility="Auto"
         		ItemsSource="{Binding Targets}"
-        		SelectedItem="{Binding SelectedTarget}"/>
+        		SelectedItem="{Binding SelectedTarget}"
+                Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"/>
             <!--
             <Button Content="Delete"
                     Command="{Binding DeleteCommand}"
