--- a/TrancheWpf/App.xaml
+++ b/TrancheWpf/App.xaml
@@ -1,7 +1,20 @@
-﻿<Application x:Class="TrancheWpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:TrancheWpf" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vml="clr-namespace:TrancheWpf.VML">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="TrancheWpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:TrancheWpf" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:vml="clr-namespace:TrancheWpf.VML">
   <Application.Resources>
     <ResourceDictionary>
-    </ResourceDictionary>
+    <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
+                <!--
+                <ResourceDictionary Source="Themes\BureauBlack.xaml" />
+                <ResourceDictionary Source="Themes\BureauBlue.xaml" />
+                <ResourceDictionary Source="Themes\ExpressionLight.xaml" />
+                <ResourceDictionary Source="Themes\ShinyBlue.xaml" />
+                <ResourceDictionary Source="Themes\ShinyRed.xaml" />
+                <ResourceDictionary Source="Themes\WhistlerBlue.xaml" />
+                <ResourceDictionary Source="Themes\ShinyBlue.xaml" />
+                <ResourceDictionary Source="Themes\WhistlerBlue.xaml" />
+                <ResourceDictionary Source="Themes\BureauBlue.xaml" />
+                -->
+            <ResourceDictionary Source="/DataGridThemes;component/ExpressionDark.xaml" /><!--<ResourceDictionary Source="/DataGridThemes;component/ExpressionLight.xaml" />--><!--<ResourceDictionary Source="/DataGridThemes;component/WhistlerBlue.xaml" />--></ResourceDictionary.MergedDictionaries></ResourceDictionary>
   </Application.Resources>
 </Application>
