--- a/TrancheWpf/MainWindow.xaml
+++ b/TrancheWpf/MainWindow.xaml
@@ -6,31 +6,29 @@
         xmlns:local="clr-namespace:TrancheWpf"
         xmlns:views="clr-namespace:TrancheWpf.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" Background="#FF1F405B">
+        Title="MainWindow" Height="1080" Width="1920" Background="#FF1F405B">
 
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <views:TargetsView x:Name = "TargetsViewControl" HorizontalAlignment="Stretch" Foreground="#FF423131" Grid.Column="0"
-            Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"/>
-        <GridSplitter Grid.Column="1" Width="5"  HorizontalAlignment="Stretch"></GridSplitter>
-        <Grid Grid.Column="2" HorizontalAlignment="Stretch">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="3*"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition Width="200"/>
 
-            <views:TargetMediaView Grid.Row="0" x:Name="TargetMediaView"
-                Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"/>
-            
-            <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
-            
-            <views:TargetMediaDetailView Grid.Row="2" x:Name="TargetMediaDetailView" HorizontalAlignment="Stretch"
-                Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"/>
-        </Grid>
+
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <views:MenuBarView Grid.Row="0" Grid.ColumnSpan="3"/>
+
+        <views:TargetsView Grid.Column="0" Grid.Row="1" x:Name = "TargetsViewControl" HorizontalAlignment="Stretch" Foreground="#FF423131"/>
+        <GridSplitter Grid.Column="1" Grid.Row="1" Width="5"  HorizontalAlignment="Stretch"/>
+        <views:TargetMediaView Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" x:Name="TargetMediaView"/>
+        <GridSplitter Grid.Column="3" Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
+        <views:TargetMediaDetailView Grid.Column="4" Grid.Row="1" x:Name="TargetMediaDetailView" HorizontalAlignment="Stretch"/>        
     </Grid>
 </Window>
